--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="63dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
         android:text="게시글 제목"
         android:textColor="#000000"
         android:textSize="25dp"
@@ -34,7 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
         android:ems="10"
         android:hint="게시글 제목을 입력하세요"
         android:inputType="textPersonName"
@@ -146,7 +144,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
         android:ems="10"
         android:hint="판매가격을 입력하세요"
         android:inputType="textPersonName"
@@ -169,35 +166,24 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
         android:ems="10"
         android:hint="전화번호를 입력하세요"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText15" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:hint="판매가능 시간을 입력하세요"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
     <EditText
         android:id="@+id/editText17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="214dp"
+        android:layout_height="57dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="입력"
+        android:text="판매가능 시간을 입력하세요"
         android:textColor="#87AAAAAA"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/editText16" />
 
     <ImageButton
@@ -205,7 +191,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
         android:onClick="SearchButton1"
         app:layout_constraintBottom_toBottomOf="@+id/editText11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -225,9 +210,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
         android:onClick="SearchButton3"
         app:layout_constraintBottom_toBottomOf="@+id/editText14"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_search" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="61dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="71dp"
+        android:text="시간"
+        android:textColor="#000000"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toStartOf="@+id/editText17"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="58dp"
+        android:onClick="completebtn"
+        android:text="입력 완료"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
