--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,31 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00A3C07F"
     tools:context=".HomeActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="weekend farm"
-        android:textColor="#000000"
-        android:textSize="50dp"
-        android:textAlignment="center"
         android:gravity="top"
+        android:text="주말농장"
+        android:textAlignment="center"
+        android:textColor="#034905"
+        android:textSize="50dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="120dp"
         android:onClick="ClickButton1"
         android:text="판매자"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,11 +37,21 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="66dp"
-        android:layout_marginRight="66dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="120dp"
         android:onClick="ClickButton2"
         android:text="구매자"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="278dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="56dp"
+        android:onClick="ClickButton3"
+        android:text="작물/주소 정보 요청하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
