--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".request">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="270dp"
+        android:layout_height="39dp"
+        android:text="관리자에게 요청하기"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="61dp"
+        tools:layout_editor_absoluteY="86dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
