home activity 디자인 수정

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,56 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00A3C07F"
+    android:background="#F9F7E8"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:text="주말농장"
-        android:textAlignment="center"
-        android:textColor="#034905"
-        android:textSize="50dp"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="312dp"
+        android:layout_height="322dp"
+        android:layout_gravity="center"
+        android:background="@drawable/home"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="173dp"></ImageView>
 
-    <Button
+    <ImageButton
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="120dp"
+        android:background="@drawable/seller_button"
         android:onClick="ClickButton1"
-        android:text="판매자"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"></ImageButton>
 
-    <Button
+    <ImageButton
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="120dp"
+        android:background="@drawable/buyer_button"
         android:onClick="ClickButton2"
-        android:text="구매자"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" ></ImageButton>
 
-    <Button
+    <ImageButton
         android:id="@+id/button4"
-        android:layout_width="278dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="56dp"
+        android:layout_width="275dp"
+        android:layout_height="50dp"
         android:onClick="ClickButton3"
-        android:text="작물/주소 정보 요청하기"
+        android:background="@drawable/request_button"
+        android:layout_marginBottom="55dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginEnd="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" ></ImageButton>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
