--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -1,243 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Seller">
-
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp" />
+    android:orientation="vertical"
+    tools:context=".Seller"
+    >
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:layout_marginEnd="12dp"
-        android:text="게시글 제목"
+        android:id="@+id/textView"
+        android:layout_width="299dp"
+        android:layout_height="39dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:text="판매 농작물 정보 입력"
         android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/editText10"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        android:layout_margin="70dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:context=".seller">
+
+        <TextView
+            android:id="@+id/textViewti"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="  게시글 제목"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="123dp"
+            tools:layout_editor_absoluteY="195dp" />
+
+
+        <EditText
+            android:id="@+id/seller2"
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:hint=" 예) 신선한 오이 팔아요~"
+            android:inputType="text"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:context=".seller">
+
+        <TextView
+            android:id="@+id/textViewad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="  주소 입력"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="123dp"
+            tools:layout_editor_absoluteY="195dp" />
+
+        <ImageButton
+            android:id="@+id/buttonAdd"
+            android:layout_width="42dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="26dp"
+            android:layout_weight="0.2"
+            android:onClick="buttonAdd"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+        <EditText
+            android:id="@+id/addr"
+            android:layout_width="199dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2.5"
+            android:hint=" 예)덕양구 덕은동 569-3"
+            android:inputType="text"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:context=".seller">
+
+        <TextView
+            android:id="@+id/textViewcr1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="  작물 입력"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="123dp"
+            tools:layout_editor_absoluteY="195dp" />
+
+        <ImageButton
+            android:id="@+id/buttonCr"
+            android:layout_width="42dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="26dp"
+            android:layout_weight="0.2"
+            android:onClick="buttonCr"
+            app:srcCompat="@android:drawable/ic_menu_search" />
+
+
+        <EditText
+            android:id="@+id/cropinput"
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2.5"
+            android:hint=" 예) 비트"
+            android:inputType="text"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <EditText
-        android:id="@+id/editText10"
-        android:layout_width="wrap_content"
+        android:id="@+id/infoinput"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:ems="10"
-        android:hint="게시글 제목을 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="주소"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <EditText
-        android:id="@+id/editText11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:ems="10"
-        android:hint="주소를 선택하세요"
-        android:inputType="textPersonName"
-
-        app:layout_constraintStart_toStartOf="@+id/editText10"
-        app:layout_constraintTop_toBottomOf="@+id/editText10" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="판매작물1"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText12"
-        app:layout_constraintStart_toStartOf="@+id/guideline" />
-
-    <EditText
-        android:id="@+id/editText12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="판매작물을 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editText11"
-        app:layout_constraintTop_toBottomOf="@+id/editText11" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:text="가격"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <EditText
-        android:id="@+id/editText13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:hint="판매 가격을 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editText12"
-        app:layout_constraintTop_toBottomOf="@+id/editText12" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="판매작물2"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText14"
-        app:layout_constraintStart_toStartOf="@+id/guideline" />
-
-    <EditText
-        android:id="@+id/editText14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:ems="10"
-        android:hint="판매작물을 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editText13"
-        app:layout_constraintTop_toBottomOf="@+id/editText13" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:text="가격"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <EditText
-        android:id="@+id/editText15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="34dp"
-        android:ems="10"
-        android:hint="판매가격을 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText14" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전화번호"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText16"
-        app:layout_constraintStart_toStartOf="@+id/guideline" />
-
-    <EditText
-        android:id="@+id/editText16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="34dp"
-        android:ems="10"
-        android:hint="전화번호를 입력하세요"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <EditText
-        android:id="@+id/editText17"
-        android:layout_width="214dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="34dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="판매가능 시간을 입력하세요"
-        android:textColor="#87AAAAAA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/editText16" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:onClick="SearchButton1"
-        app:layout_constraintBottom_toBottomOf="@+id/editText11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_search" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="SearchButton2"
-        app:layout_constraintBottom_toBottomOf="@+id/editText12"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:srcCompat="@android:drawable/ic_menu_search" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:onClick="SearchButton3"
-        app:layout_constraintBottom_toBottomOf="@+id/editText14"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_search" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="61dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="71dp"
-        android:text="시간"
-        android:textColor="#000000"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/editText17"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        android:layout_weight="2.5"
+        android:background="#FFFAE7"
+        android:hint=" 가격, 시간, 전화번호 등 판매에 필요한 정보를 입력해주세요"
+        android:inputType="text"
+        android:textSize="18sp"
+        android:layout_margin="20dp"/>
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnHot"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="58dp"
-        android:onClick="completebtn"
-        android:text="입력 완료"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:background="#189BA3"
+        android:onClick="btnHot"
+        android:text="내 주변 hot 작물 확인"
+        android:layout_margin="10dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:context=".seller">
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textColor="#000000"
+            android:text="소상공인인 경우 체크!" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btnComplete"
+            android:layout_width="140dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#189BA3"
+            android:onClick="btnComplete"
+            android:text="입력 완료"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+</LinearLayout>
+
