--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -41,7 +41,7 @@
 
 
         <EditText
-            android:id="@+id/seller2"
+            android:id="@+id/title"
             android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -78,7 +78,7 @@
             app:srcCompat="@android:drawable/ic_menu_search" />
 
         <EditText
-            android:id="@+id/addr"
+            android:id="@+id/addressinput"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
@@ -128,7 +128,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/infoinput"
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
@@ -171,6 +171,12 @@
             android:textSize="18sp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/sqltext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
 
