--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -78,7 +78,7 @@
             app:srcCompat="@android:drawable/ic_menu_search" />
 
         <EditText
-            android:id="@+id/addressinput"
+            android:id="@+id/addressInput"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
@@ -117,7 +117,7 @@
 
 
         <EditText
-            android:id="@+id/cropinput"
+            android:id="@+id/cropInput"
             android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
