--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -8,12 +8,34 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="93dp"
+        android:layout_height="61dp"
         android:background="#189BA3"
         android:gravity="center"
         android:text="원하는 농작물을 고르세요.(다중선택가능)"
         android:textColor="#FFF9F7E8"
         android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/textView1"
+            android:text="선택한 작물 : " />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/selected_crop"/>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
