--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -77,13 +77,11 @@
             android:onClick="buttonAdd"
             app:srcCompat="@android:drawable/ic_menu_search" />
 
-        <EditText
+        <TextView
             android:id="@+id/addressInput"
             android:layout_width="199dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
-            android:hint=" 예)덕양구 덕은동 569-3"
-            android:inputType="text"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -116,13 +114,11 @@
             app:srcCompat="@android:drawable/ic_menu_search" />
 
 
-        <EditText
+        <TextView
             android:id="@+id/cropInput"
             android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
-            android:hint=" 예) 비트"
-            android:inputType="text"
             android:textSize="18sp" />
 
     </LinearLayout>
