--- a/app/src/main/res/layout/activity_crop2.xml
+++ b/app/src/main/res/layout/activity_crop2.xml
@@ -8,15 +8,37 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="93dp"
+        android:layout_height="61dp"
         android:background="#189BA3"
         android:gravity="center"
         android:text="원하는 농작물을 고르세요.(다중선택가능)"
         android:textColor="#FFF9F7E8"
         android:textSize="20sp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/textView1"
+            android:text="선택한 작물 : " />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/selected_crop2"/>
+
+    </LinearLayout>
+
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/listView2"
         android:layout_width="425dp"
         android:layout_height="581dp"
         android:cacheColorHint="#FFF9F7E8" />
@@ -28,6 +50,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginBottom="55dp"
         android:background="@drawable/confirm"
-        android:onClick="ClickButton"></ImageButton>
+        android:onClick="ClickButton5"></ImageButton>
 </LinearLayout>
 
