작물 select 후 주소 불러오기 성공!

--- a/app/src/main/res/layout/activity_crop3.xml
+++ b/app/src/main/res/layout/activity_crop3.xml
@@ -41,7 +41,8 @@
             android:layout_weight="0.3"
             android:layout_height="match_parent"
             android:onClick="nextgo"
-            android:text="next" />
+            android:text="next"
+            tools:ignore="OnClick" />
 
     </LinearLayout>
 
