--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -17,39 +17,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="67dp"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:layout_marginRight="8dp"
             android:id="@+id/textView1"
-            android:text="선택한 작물 : " />
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="8dp"
+            android:text="선택항목:"
+            android:textSize="26sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26sp"
+            android:id="@+id/selected_crop"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
             android:layout_marginRight="8dp"
-            android:id="@+id/selected_crop"/>
+            android:textSize="26sp" />
+
+        <ImageButton
+            android:id="@+id/btnGet2"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:background="@drawable/confirm"
+            android:onClick="ClickButton"></ImageButton>
+
 
     </LinearLayout>
+
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="425dp"
         android:layout_height="581dp"
-        android:cacheColorHint="#FFF9F7E8" />
+        android:cacheColorHint="#FFF9F7E8" >
+    </ListView>
 
-    <ImageButton
-        android:id="@+id/btnGet2"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginBottom="55dp"
-        android:background="@drawable/confirm"
-        android:onClick="ClickButton"></ImageButton>
 </LinearLayout>
 
