--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -45,7 +45,7 @@
             android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:hint=" 예) 신선한 오이 팔아요~"
+            android:hint=" 예) 달달한 고구마 팔아요~"
             android:inputType="text"
             android:textSize="18sp" />
 
