--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -10,26 +10,8 @@
 
 
     <TextView
-        android:id="@+id/textView_list_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:padding="5dp" />
-
-
-    <TextView
-        android:id="@+id/textView_list_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:layout_margin="5dp"
-        android:padding="5dp" />
-
-
-    <TextView
         android:id="@+id/textView_list_address"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="5"
         android:layout_margin="5dp"
