--- a/app/src/main/res/layout/activity_crop2.xml
+++ b/app/src/main/res/layout/activity_crop2.xml
@@ -12,28 +12,25 @@
         android:id="@+id/textView_main_label"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="검색할 작물을 입력해주세요 . " />
+        android:text="작물을 선택해주세요 . " />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editText_main_searchKeyword1"
+        <TextView
+            android:id="@+id/selected_crop2"
             android:layout_width="0dp"
             android:layout_weight="0.35"
-            android:hint="작물 입력"
             android:layout_height="match_parent" />
-
-
 
         <Button
             android:id="@+id/button_main_search"
             android:layout_width="0dp"
             android:layout_weight="0.3"
             android:layout_height="match_parent"
-            android:text="Search" />
+            android:text="search" />
 
         <Button
             android:id="@+id/nextgo"
@@ -48,8 +45,19 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_height="200dp"
         android:id="@+id/listView_main_list"/>
+
+    <TextView
+        android:id="@+id/textvieww"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:text="농작물 종류" />
+
+    <ListView
+        android:id="@+id/crop_list"
+        android:layout_width="match_parent"
+        android:layout_height="421dp"
+        android:cacheColorHint="#FFF9F7E8"></ListView>
 
 </LinearLayout>
