--- a/app/src/main/res/layout/list_y.xml
+++ b/app/src/main/res/layout/list_y.xml
@@ -9,12 +9,11 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/x_coordinates"
+        android:id="@+id/y_coordinates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_margin="5dp"
         android:padding="5dp" />
-
 
 </LinearLayout>
