--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout_main"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
         tools:context=".MainActivity" />
+
+
+    <TextView
+        android:id="@+id/textview3"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:text="농장 주소" />
+
+    <ListView
+        android:id="@+id/mark_address_list"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:cacheColorHint="#FFF9F7E8"></ListView>
 
 
 </LinearLayout>
