--- a/app/src/main/res/layout/activity_check2.xml
+++ b/app/src/main/res/layout/activity_check2.xml
@@ -6,13 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Crop2">
+    tools:context=".Check2">
 
-    <TextView
-        android:id="@+id/textView_main_label"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="작물을 선택해주세요 . " />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/textView_main_label"
+            android:text="주소 검색" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/textView1"
+            android:id="@+id/editsearch"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +36,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/selected_crop2"
+            android:id="@+id/selected_address2"
             android:layout_width="0dp"
             android:layout_weight="0.35"
             android:layout_height="match_parent" />
@@ -33,35 +49,13 @@
             android:text="search" />
 
         <Button
-            android:id="@+id/nextgo"
+            android:id="@+id/nextgogo"
             android:layout_width="0dp"
             android:layout_weight="0.3"
             android:layout_height="match_parent"
-            android:onClick="nextgo"
+            android:onClick="nextgogo"
             android:text="next"
             tools:ignore="OnClick" />
-
-    </LinearLayout>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/listView_address_list"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal">
-
-        <ListView
-            android:id="@+id/listView_main_listX"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-
-        <ListView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:id="@+id/listView_main_listY"/>
 
     </LinearLayout>
 
@@ -69,12 +63,21 @@
         android:id="@+id/textvieww"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:text="농작물 종류" />
+        android:text="주소" />
 
     <ListView
-        android:id="@+id/crop_list"
+        android:id="@+id/addr_list"
         android:layout_width="match_parent"
-        android:layout_height="310dp"
-        android:cacheColorHint="#FFF9F7E8"></ListView>
+        android:layout_height="421dp"
+        android:cacheColorHint="#FFF9F7E8"
+        android:layout_below="@id/editTextFilter"
+        android:textFilterEnabled="true"></ListView>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/listView_main_list"/>
+
+
 
 </LinearLayout>
