--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textview3"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:text="농장 주소" />
+        android:text="원하는 농장 주소를 선택하세요" />
 
     <ListView
         android:id="@+id/mark_address_list"
