--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -43,13 +43,13 @@
             android:layout_weight="2"
             android:textSize="18sp" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/textView_title"-->
-<!--            android:layout_width="300dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="2"-->
-<!--            android:textColor="#000000"-->
-<!--            android:textSize="18sp" />-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/textView_title"-->
+        <!--            android:layout_width="300dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_weight="2"-->
+        <!--            android:textColor="#000000"-->
+        <!--            android:textSize="18sp" />-->
 
     </LinearLayout>
 
@@ -114,7 +114,7 @@
             android:textColor="#000000"
             android:textSize="18sp" />
         <TextView
-            android:id="@+id/inputty"
+            android:id="@+id/textView_main_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -128,18 +128,16 @@
         android:id="@+id/listView_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2.5"
-        android:textSize="18sp"
-        android:layout_margin="20dp"/>
+        android:layout_weight="2.5" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/textView_content"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_weight="2.5"-->
-<!--        android:textColor="#000000"-->
-<!--        android:textSize="18sp"-->
-<!--        android:layout_margin="20dp"/>-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/textView_content"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_weight="2.5"-->
+    <!--        android:textColor="#000000"-->
+    <!--        android:textSize="18sp"-->
+    <!--        android:layout_margin="20dp"/>-->
 
     <Button
         android:id="@+id/btnOkay2"
@@ -147,7 +145,8 @@
         android:layout_height="wrap_content"
         android:background="#189BA3"
         android:onClick="btnOkay2"
-        android:text="확인" />
+        android:text="확인"
+        tools:ignore="OnClick" />
 
     <Button
         android:id="@+id/button_main_search2"
